--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "author": "yashwanth",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "mongoose": "^8.13.2"
   }
 }
